# Image_Clustering_Package

./: .gitignore  README.md  pyproject.toml
data/saved_models/fashion485_v1/: centroids.npz  cluster_labels.npy  clustering_model.txt  scaler.npz
notebooks/DL_model/: DL_approach_32_samples_top_5_v6.ipynb  DL_approach_dbscna_agglomerative_clustering_v8.ipynb  DL_approach_pca_v7.ipynb  DL_approach_preprocess_v3.ipynb  DL_approach_pytorch.ipynb
notebooks/vanila/clustering/: clustering_step_3.ipynb
notebooks/vanila/clustering/clustering_results/clustering_results_2/: InceptionV3_None_20241109-153721_PCA50_cluster_names.npy  InceptionV3_None_20241109-153721_PCA50_labels.npy  InceptionV3_imagenet_20241109-153636_PCA50_cluster_names.npy  InceptionV3_imagenet_20241109-153636_PCA50_labels.npy  ResNet50_None_20241109-153431_PCA50_cluster_names.npy  ResNet50_None_20241109-153431_PCA50_labels.npy  ResNet50_imagenet_20241109-153348_PCA50_cluster_names.npy  ResNet50_imagenet_20241109-153348_PCA50_labels.npy  VGG16_None_20241109-153549_PCA50_cluster_names.npy  VGG16_None_20241109-153549_PCA50_labels.npy  VGG16_imagenet_20241109-153510_PCA50_cluster_names.npy  VGG16_imagenet_20241109-153510_PCA50_labels.npy  clustering_evaluation_results.csv
notebooks/vanila/clustering/clustering_results/clustering_results_3/: InceptionV3_None_20241109-161707_PCA50_cluster_names.npy  InceptionV3_None_20241109-161707_PCA50_labels.npy  (+11 more)
src/clustering_20241108/: clustering.py  data_preprocessor.py  feature_extractor.py  image_downloader.py  main.py  url_cluster_infer.py
(+24 files in other folders)
